--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,17 +1,22 @@
+plugins:
+  # https://github.com/jest-community/eslint-plugin-jest
+  - jest
+
 env:
   node: true
+  jest/globals: true
 
 extends:
- - "airbnb-base"
- - "plugin:import/recommended"
+  - "airbnb-base"
+  - "plugin:import/recommended"
 parserOptions:
   ecmaVersion: latest
 
 rules:
   no-console: 0
   import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
- - error
- - ignorePackages
- - js: always
-
-  "import/prefer-default-export": "off."
+    - error
+    - ignorePackages
+    - js: always
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  linebreak-style: ["off", "unix"]
