--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "[![Actions Status](https://github.com/cokuevn/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/cokuevn/frontend-project-46/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx -n --experimental-vm-modules jest",
+    "test:watch": "npx -n --experimental-vm-modules jest --coverage --watch"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,12 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
+    "@jest/globals": "^29.3.1",
     "eslint": "^8.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.2.0",
+    "jest": "^29.3.1"
   }
 }
