--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -1,27 +1,33 @@
-name: jest-test
-on: 
- - push
-  
+name: Node CI
+
+on: push
+
+env:
+  CI: true
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
- 
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+
     steps:
- - uses: actions/checkout@v2
- - name: Setup Node.js 
-        uses: actions/setup-node@v1
-        with:
-          node-version: '16.x'
- - name: npm install
-        run: 
-          npm install
- - name: Run jest
-        run: 
-          make test
- - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v3.0.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: make install
+    - run: make lint
+    - run: make test
+    - name: Test & publish code coverage  
+      uses: paambaati/codeclimate-action@v3.0.0
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+        coverageCommand: make test-coverage
+        debug: true
